// Copyright 2024 The Jumpstarter Authors

syntax = "proto3";

package jumpstarter.v1;

message LabelSelectorRequirement {
  string key = 1;
  string operator = 2;
  repeated string values = 3;
}

// Reference: https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/label-selector/
message LabelSelector {
  repeated LabelSelectorRequirement match_expressions = 1;
  map<string, string> match_labels = 2;
}

// Reference: https://github.com/kubernetes/kubernetes/blob/v1.31.1/staging/src/k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto
message Time {
  optional int64 seconds = 1;
  optional int32 nanos = 2;
}

message Condition {
  optional string type = 1;
  optional string status = 2;
  optional int64 observedGeneration = 3;
  optional Time lastTransitionTime = 4;
  optional string reason = 5;
  optional string message = 6;
}
